--- a/.github/workflows/Android-CI.yml
+++ b/.github/workflows/Android-CI.yml
@@ -1,6 +1,8 @@
-name: PullRequest
+name: "PullRequest"
 
-on: [pull_request]
+on:
+  push:
+  pull_request:
 
 jobs:
   buildTest:
@@ -10,9 +12,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.2
         with:
-          fetch-depth: 0
+          fetch-depth: 1
       - name: Install Android SDK
-        uses: malinskiy/action-android/install-sdk@release/0.0.7
+        uses: malinskiy/action-android/install-sdk@0.0.7
       - name: Build project
         run: ./gradlew assembleDebug
         env:
@@ -51,13 +53,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.2
         with:
-          fetch-depth: 0
+          fetch-depth: 1
       - name: Install JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
       - name: Install Android SDK
-        uses: malinskiy/action-android/install-sdk@release/0.0.7
+        uses: malinskiy/action-android/install-sdk@0.0.7
       - name: Code checks
         run: ./gradlew check
       - name: Archive Lint report
